fix(footer): increase gaps for lg, xl, and 2xl breakpoints
Footer grid (brand ↔ nav):
- lg: 6rem, xl: 10rem, 2xl: 14rem

Nav columns:
- lg: 4rem, xl: 5rem, 2xl: 6rem

--- a/sites/arolariu.ro/src/styles/components/_footer.scss
+++ b/sites/arolariu.ro/src/styles/components/_footer.scss
@@ -73,15 +73,15 @@
 
   @include respond-to('lg') {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    column-gap: 4rem;
-  }
-
-  @include respond-to('xl') {
     column-gap: 6rem;
   }
 
-  @include respond-to('2xl') {
+  @include respond-to('xl') {
     column-gap: 10rem;
+  }
+
+  @include respond-to('2xl') {
+    column-gap: 14rem;
   }
 }
 
@@ -188,15 +188,15 @@
   }
 
   @include respond-to('lg') {
-    gap: 2.5rem;
+    gap: 4rem;
   }
 
   @include respond-to('xl') {
-    gap: 3rem;
+    gap: 5rem;
   }
 
   @include respond-to('2xl') {
-    gap: 4rem;
+    gap: 6rem;
   }
 }
 
